Drug interaction Agent

--- a/Drug_Interaction_Agent.ipynb
+++ b/Drug_Interaction_Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9IKtIkxDO/cesnlGlsmgg",
+      "authorship_tag": "ABX9TyP4u17TktQju3+PhQOrz0o7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Welcome to My LLM Agent Tutorial! 💊🤖\n",
+        "\n",
+        "Hey there! In this tutorial, we’re going to build something super cool—a **simple LLM agent** using **Langchain**! And trust me, it’s going to be a handy little tool, especially for all those retail pharmacists out there. 🧑‍⚕️\n",
+        "\n",
+        "So, what’s the plan? Well, this agent is going to help pharmacists figure out **interactions between two drugs**. The agent will dig into **Wikipedia** to find the listed drug interactions for each one and compare them to see if they’re safe to take together. Think of it like a pharmacist’s little AI sidekick!\n",
+        "\n",
+        "Here’s the fun part: We’ll be running all of this in **Google Colab**! No need to worry about setting up your local environment or dealing with complicated installations. We’ll start by installing the required libraries like **Langchain**, **OpenAI**, and a few others. 💻\n",
+        "\n",
+        "By the end of this, you’ll have your own smart assistant who knows its way around the pharmaceutical world. Let’s dive in, install our tools, and have some fun while building this! 🚀\n"
+      ],
+      "metadata": {
+        "id": "5hiA91hQyvlb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip3 install langchain langchain_community openai wikipedia-api"
@@ -38,7 +55,7 @@
         "id": "cnYIV9eCzIt4",
         "outputId": "e5448e94-d945-4f9a-c4db-c732f4e6b4b8"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,8 +125,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Setup - What’s Going on Here? 🤔\n",
+        "\n",
+        "Right, so this section is setting the stage to play around with some **language models**! Here’s the gist:\n",
+        "\n",
+        "- We start by importing a few handy libraries like **OpenAI**, **LangChain**, and **WikipediaAPI** to get things rolling. 📚\n",
+        "- Then, there's a **big reminder**—don’t go leaving your API keys lying around in public repos. Keep 'em safe by using **secrets** or **environment variables**! 🔒\n",
+        "- The OpenAI API key is fetched using **Google Colab's userdata**, making sure it's securely stored. 🔐\n",
+        "- Finally, we initialize the language model (`llm`) using the **OpenAI** library with a little temperature tweaking (which controls how creative the responses will be).\n",
+        "\n",
+        "In short, this section is all about setting up an **OpenAI language model** and making sure your API key is safe and sound. Time to have some fun with AI without the stress! 😎\n"
+      ],
+      "metadata": {
+        "id": "-oIAuvygx1bc"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "QW415HBCzDvo"
       },
@@ -129,6 +164,37 @@
         "# Initialize the language model\n",
         "llm = OpenAI(api_key=open_ai_key, temperature=0.7)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Building the Agent - What's Next? 💊🤖\n",
+        "\n",
+        "So, what are we doing here? We’re building a **super helpful AI assistant** for pharmacists using something called an **LLM agent**. But first, let’s break that down:\n",
+        "\n",
+        "## What’s an LLM Agent Anyway? 🤔\n",
+        "An **LLM agent** is a fancy way of saying a **Language Learning Model (LLM)** that's been set up to interact with specific tools and respond to tasks. Imagine it’s like a super smart assistant, powered by large language models (like OpenAI’s GPT), that can understand instructions and use other resources (like Wikipedia) to get stuff done. 🚀\n",
+        "\n",
+        "In this case, our agent is like a **pharmacist’s assistant**. It’s going to:\n",
+        "1. **Look up drug information** on Wikipedia (with the help of the `search_drug_info` function).\n",
+        "2. **Find any sections on drug interactions** (if they exist).\n",
+        "3. **Analyze whether it’s safe to take two drugs together** based on the information it digs up.\n",
+        "\n",
+        "## How Does It Work?\n",
+        "We start by setting up **Wikipedia** as a source using the `wikipediaapi` package. The `search_drug_info` function is like the agent’s “search button.” It looks up the drug’s page and tries to extract any section on drug interactions. If it can’t find anything, it politely returns, \"No interaction information found.\" 💁‍♂️\n",
+        "\n",
+        "Next up, we define a **tool**—this is what our agent will use to perform the search. We wrap everything together in the Langchain **LLM agent**. This is like connecting the dots between the brain (the LLM), the tool (Wikipedia search), and the task (checking for drug interactions).\n",
+        "\n",
+        "## The Fun Part: Checking Drug Interactions\n",
+        "We also write a neat little **prompt template** that explains the agent’s role: “You’re a pharmaceutical assistant; help check for drug interactions.” When the agent runs, it uses this template and the `search_drug_info` function to figure out if two drugs (like **aspirin** and **levisamol**) play nice together or not. 🧑‍⚕️\n",
+        "\n",
+        "Finally, we **run the agent** by giving it two drugs to check, and it prints out the result. So, pharmacists can get a quick answer to whether it’s safe for someone to take two meds at once! 💊🔬\n",
+        "\n",
+        "In a nutshell: We’re building a smart agent that helps pharmacists check if two drugs interact, by using Wikipedia to gather and compare drug info. Not only is it efficient, but it also makes life easier for pharmacists (and saves lives!). 🙌\n"
+      ],
+      "metadata": {
+        "id": "HKAcT5ou0lUU"
+      }
     },
     {
       "cell_type": "code",
@@ -154,7 +220,7 @@
       "metadata": {
         "id": "VVU2FHUFzGSN"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,9 +229,9 @@
         "agent = initialize_agent(tools, llm, agent=\"zero-shot-react-description\", verbose=True)"
       ],
       "metadata": {
-        "id": "-w2DsTMD0G7r"
+        "id": "s9dTkxVV1eyJ"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,7 +250,7 @@
       "metadata": {
         "id": "Bd6VF8s30Jg8"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +268,7 @@
         "id": "WMTsHSDp0PkT",
         "outputId": "5cb72d98-b3e3-4463-fe4f-5d2462c8270d"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +314,7 @@
         "id": "6UFJodkS0stQ",
         "outputId": "a64ca9ae-01a1-4c24-c88d-e3b36b08fa20"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
