--- a/Drug_Interaction_Agent.ipynb
+++ b/Drug_Interaction_Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4u17TktQju3+PhQOrz0o7",
+      "authorship_tag": "ABX9TyPmp/IQIAbtvviSdRyaxb/Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,7 +173,7 @@
         "So, what are we doing here? We’re building a **super helpful AI assistant** for pharmacists using something called an **LLM agent**. But first, let’s break that down:\n",
         "\n",
         "## What’s an LLM Agent Anyway? 🤔\n",
-        "An **LLM agent** is a fancy way of saying a **Language Learning Model (LLM)** that's been set up to interact with specific tools and respond to tasks. Imagine it’s like a super smart assistant, powered by large language models (like OpenAI’s GPT), that can understand instructions and use other resources (like Wikipedia) to get stuff done. 🚀\n",
+        "An **LLM agent** is a fancy way of saying a **Large Language Model (LLM)** that's been set up to interact with specific tools and respond to tasks. Imagine it’s like a super smart assistant, powered by large language models (like OpenAI’s GPT), that can understand instructions and use other resources (like Wikipedia) to get stuff done. 🚀\n",
         "\n",
         "In this case, our agent is like a **pharmacist’s assistant**. It’s going to:\n",
         "1. **Look up drug information** on Wikipedia (with the help of the `search_drug_info` function).\n",
